--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -69,7 +69,7 @@
     width: 60%;
     border: none;
     border-bottom: 1px solid #121619;
-    color: black;
+    color: rgb(242, 223, 223);
     background-color: #ae755d;
     /* background-color: rgb(130, 56, 56); */
     margin-left: 20%;
@@ -87,9 +87,11 @@
   }
   input::placeholder,
   textarea::placeholder {
-    font-weight: bold;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    font-weight:lighter;
+    color: rgb(247, 243, 243);
+    
   }
   form input:focus,
   textarea:focus {
@@ -100,7 +102,7 @@
     margin-top: 15px;
     color: rgb(255, 253, 253);
     font-weight: 100;
-    font-size: medium;
+    font-size:larger;
   }
   
   form button {
