--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,5 +1,5 @@
-/* .carousel .carousel-item {
-    height: 400px;
+.carousel .carousel-item {
+    height: 600px;
   }
   
   .carousel-item img {
@@ -10,12 +10,25 @@
       min-height: 500px;
   }
 
-  .card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+
+
+
+.card{
+padding: 8%;
+margin-top: 50px;
+margin-bottom: 15px;
+margin-left: 8px;
+margin-right: 8px;
 }
- */
 
+.card-img{
+  padding: 10%;
+ 
+}
 
+.img.card-img-top{
+  height:10px ;
+  width: 10px;
+  align-items: center;
 
+}
