--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,34 +1,30 @@
-.carousel .carousel-item {
-    height: 600px;
-  }
-  
-  .carousel-item img {
-      position: absolute;
-      object-fit: cover;
-      top: 0;
-      left: 0;
-      min-height: 500px;
-  }
 
-
-
-
-.card{
-padding: 8%;
-margin-top: 50px;
-margin-bottom: 15px;
-margin-left: 8px;
-margin-right: 8px;
+.carousel-item {
+  height: fit-content;
 }
 
-.card-img{
-  padding: 10%;
+.carousel-item .card {
+  padding-bottom: 60px;
+  margin: 20px;
+  box-shadow: 0 14px 8px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+ .carousel-item .card .card-img-top{
+   padding: 20px;
+ }
+
+ .carousel .slide{
+   padding-bottom: 20px;
+ }
+
+ .carousel {
+   /* background-color: black; */
+ }
  
-}
+ .carousel-indicators{
+   bottom: -30px;
+ }
 
-.img.card-img-top{
-  height:10px ;
-  width: 10px;
-  align-items: center;
-
-}
+ .carousel-indicators button{
+   background-color: gray !important;
+ }
